--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   	"generators": true
   },
   "rules": {
-    "max-len": [1, 80, 4]
+    "max-len": [1, 80, 4],
+    "no-console": 0
   },
   "extends": "airbnb"
 }
