--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "consul": "^0.23.0",
     "css-loader": "^0.19.0",
     "file-loader": "^0.8.4",
+    "freezer-js": "^0.9.6",
     "history": "^1.17.0",
     "html-webpack-plugin": "^1.6.1",
     "http": "0.0.0",
